@@ -4,26 +4,72 @@ import com.codahale.metrics.MetricRegistry;
 import com.codahale.metrics.Timer;
 import com.newrelic.api.agent.Trace;
 import gov.cms.bfd.model.rda.PreAdjMcsClaim;
+import gov.cms.bfd.server.war.commons.BBCodingSystems;
 import gov.cms.bfd.server.war.commons.carin.C4BBIdentifierType;
+import gov.cms.bfd.server.war.r4.providers.preadj.common.AbstractTransformerV2;
 import gov.cms.bfd.sharedutils.exceptions.BadCodeMonkeyException;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
+import java.util.Map;
 import org.hl7.fhir.r4.model.ClaimResponse;
 import org.hl7.fhir.r4.model.CodeableConcept;
 import org.hl7.fhir.r4.model.Coding;
+import org.hl7.fhir.r4.model.DateType;
 import org.hl7.fhir.r4.model.Extension;
 import org.hl7.fhir.r4.model.Identifier;
 import org.hl7.fhir.r4.model.Meta;
 import org.hl7.fhir.r4.model.Reference;
+import org.hl7.fhir.r4.model.Resource;
 import org.hl7.fhir.r4.model.codesystems.ClaimType;
 
 /** Transforms FISS/MCS instances into FHIR {@link ClaimResponse} resources. */
-public class McsClaimResponseTransformerV2 {
+public class McsClaimResponseTransformerV2 extends AbstractTransformerV2 {
 
   private static final String METRIC_NAME =
       MetricRegistry.name(McsClaimResponseTransformerV2.class.getSimpleName(), "transform");
+
+  /**
+   * There are only 2 statuses currently being used, and only the ones listed below are mapped to
+   * "CANCELLED". For brevity, the rest are defaulted to "ACTIVE" using {@link
+   * Map#getOrDefault(Object, Object)}.
+   */
+  private static final Map<String, ClaimResponse.ClaimResponseStatus> STATUS_MAP =
+      Map.of(
+          "r", ClaimResponse.ClaimResponseStatus.CANCELLED,
+          "z", ClaimResponse.ClaimResponseStatus.CANCELLED,
+          "9", ClaimResponse.ClaimResponseStatus.CANCELLED);
+
+  private static final Map<String, ClaimResponse.RemittanceOutcome> OUTCOME_MAP =
+      Map.ofEntries(
+          Map.entry("a", ClaimResponse.RemittanceOutcome.QUEUED),
+          Map.entry("b", ClaimResponse.RemittanceOutcome.QUEUED),
+          Map.entry("j", ClaimResponse.RemittanceOutcome.QUEUED),
+          Map.entry("k", ClaimResponse.RemittanceOutcome.QUEUED),
+          Map.entry("1", ClaimResponse.RemittanceOutcome.QUEUED),
+          Map.entry("2", ClaimResponse.RemittanceOutcome.QUEUED),
+          Map.entry("c", ClaimResponse.RemittanceOutcome.PARTIAL),
+          Map.entry("l", ClaimResponse.RemittanceOutcome.PARTIAL),
+          Map.entry("3", ClaimResponse.RemittanceOutcome.PARTIAL),
+          Map.entry("8", ClaimResponse.RemittanceOutcome.PARTIAL),
+          Map.entry("d", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("e", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("f", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("g", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("m", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("n", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("p", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("q", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("r", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("u", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("v", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("w", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("x", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("y", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("z", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("4", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("5", ClaimResponse.RemittanceOutcome.COMPLETE),
+          Map.entry("9", ClaimResponse.RemittanceOutcome.COMPLETE));
 
   private McsClaimResponseTransformerV2() {}
 
@@ -52,34 +98,94 @@ public class McsClaimResponseTransformerV2 {
     ClaimResponse claim = new ClaimResponse();
 
     claim.setId("m-" + claimGroup.getIdrClmHdIcn());
-    claim.setMeta(new Meta().setLastUpdated(Date.from(claimGroup.getLastUpdated())));
+    claim.setContained(List.of(getContainedPatient(claimGroup)));
     claim.setExtension(getExtension(claimGroup));
     claim.setIdentifier(getIdentifier(claimGroup));
-    claim.setStatus(ClaimResponse.ClaimResponseStatus.ACTIVE);
-    claim.setOutcome(ClaimResponse.RemittanceOutcome.QUEUED);
+    claim.setStatus(getStatus(claimGroup));
+    claim.setOutcome(getOutcome(claimGroup));
     claim.setType(getType());
     claim.setUse(ClaimResponse.Use.CLAIM);
-    claim.setCreated(new Date());
     claim.setInsurer(new Reference().setIdentifier(new Identifier().setValue("CMS")));
-    claim.setPatient(getPatient(claimGroup));
+    claim.setPatient(new Reference("#patient"));
     claim.setRequest(new Reference(String.format("Claim/m-%s", claimGroup.getIdrClmHdIcn())));
+
+    claim.setMeta(new Meta().setLastUpdated(Date.from(claimGroup.getLastUpdated())));
+    claim.setCreated(new Date());
 
     return claim;
   }
 
+  private static ClaimResponse.ClaimResponseStatus getStatus(PreAdjMcsClaim claimGroup) {
+    ClaimResponse.ClaimResponseStatus status;
+
+    if (claimGroup.getIdrStatusCode() == null) {
+      status = ClaimResponse.ClaimResponseStatus.ACTIVE;
+    } else {
+      // If it's not mapped, we assume it's ACTIVE
+      status =
+          STATUS_MAP.getOrDefault(
+              claimGroup.getIdrStatusCode().toLowerCase(),
+              ClaimResponse.ClaimResponseStatus.ACTIVE);
+    }
+
+    return status;
+  }
+
+  private static ClaimResponse.RemittanceOutcome getOutcome(PreAdjMcsClaim claimGroup) {
+    ClaimResponse.RemittanceOutcome outcome;
+
+    if (claimGroup.getIdrStatusCode() == null) {
+      outcome = ClaimResponse.RemittanceOutcome.QUEUED;
+    } else {
+      // If it's not mapped, we assume it's QUEUED
+      outcome =
+          OUTCOME_MAP.getOrDefault(
+              claimGroup.getIdrStatusCode().toLowerCase(), ClaimResponse.RemittanceOutcome.QUEUED);
+    }
+
+    return outcome;
+  }
+
+  private static Resource getContainedPatient(PreAdjMcsClaim claimGroup) {
+    PatientInfo patientInfo =
+        new PatientInfo(
+            ifNotNull(claimGroup.getIdrBeneFirstInit(), s -> s + "."),
+            ifNotNull(claimGroup.getIdrBeneLast_1_6(), s -> s.charAt(0) + "."),
+            ifNotNull(claimGroup.getIdrBeneMidInit(), s -> s + "."),
+            null, // MCS claims don't contain dob
+            claimGroup.getIdrBeneSex());
+
+    return getContainedPatient(claimGroup.getIdrClaimMbi(), patientInfo);
+  }
+
   private static List<Extension> getExtension(PreAdjMcsClaim claimGroup) {
-    return Collections.singletonList(
-        new Extension()
-            .setUrl("https://dcgeo.cms.gov/resources/variables/mcs-status")
-            .setValue(
-                new Coding(
-                    "https://dcgeo.cms.gov/resources/variables/mcs-status",
-                    claimGroup.getIdrStatusCode(),
-                    claimGroup.getIdrStatusCode().toLowerCase())));
+    List<Extension> extensions = new ArrayList<>();
+
+    if (claimGroup.getIdrStatusCode() != null) {
+      extensions.add(
+          new Extension(BBCodingSystems.MCS.STATUS_CODE)
+              .setValue(
+                  new Coding(
+                      BBCodingSystems.MCS.STATUS_CODE, claimGroup.getIdrStatusCode(), null)));
+    }
+
+    if (claimGroup.getIdrClaimReceiptDate() != null) {
+      extensions.add(
+          new Extension(BBCodingSystems.MCS.CLAIM_RECEIPT_DATE)
+              .setValue(new DateType(localDateToDate(claimGroup.getIdrClaimReceiptDate()))));
+    }
+
+    if (claimGroup.getIdrStatusDate() != null) {
+      extensions.add(
+          new Extension(BBCodingSystems.MCS.STATUS_DATE)
+              .setValue(new DateType(localDateToDate(claimGroup.getIdrStatusDate()))));
+    }
+
+    return List.copyOf(extensions);
   }
 
   private static List<Identifier> getIdentifier(PreAdjMcsClaim claimGroup) {
-    return Collections.singletonList(
+    return List.of(
         new Identifier()
             .setType(
                 new CodeableConcept(
@@ -87,34 +193,17 @@ public class McsClaimResponseTransformerV2 {
                         C4BBIdentifierType.UC.getSystem(),
                         C4BBIdentifierType.UC.toCode(),
                         C4BBIdentifierType.UC.getDisplay())))
-            .setSystem("https://dcgeo.cms.gov/resources/variables/icn")
+            .setSystem(BBCodingSystems.CARR_CLM_CONTROL_NUM)
             .setValue(claimGroup.getIdrClmHdIcn()));
   }
 
   private static CodeableConcept getType() {
     return new CodeableConcept()
         .setCoding(
-            Arrays.asList(
-                new Coding("https://dcgeo.cms.gov/resources/codesystem/rda-type", "MCS", null),
+            List.of(
                 new Coding(
                     ClaimType.PROFESSIONAL.getSystem(),
                     ClaimType.PROFESSIONAL.toCode(),
                     ClaimType.PROFESSIONAL.getDisplay())));
-  }
-
-  private static Reference getPatient(PreAdjMcsClaim claimGroup) {
-    return new Reference()
-        .setIdentifier(
-            new Identifier()
-                .setType(
-                    new CodeableConcept()
-                        .setCoding(
-                            Collections.singletonList(
-                                new Coding(
-                                    "http://terminology.hl7.org/CodeSystem/v2-0203",
-                                    "MC",
-                                    "Patient's Medicare number"))))
-                .setSystem("http://hl7.org/fhir/sid/us-mbi")
-                .setValue(claimGroup.getIdrClaimMbi()));
   }
 }
